Use newer API to improve code a bit